# tft-agent

./: .example_env  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  config.json  pyproject.toml  requirements.txt
.github/: filters.yml
.github/workflows/: main.yml
infra/common/pulumi-setup/: __main__.py
infra/tft-tenant/: .gitignore  Pulumi.staging.yml  Pulumi.yml  __main__.py  pyproject.toml
src/: .example.env  PatchNotesAgent.py  TDTAgent.py  __init__.py  main.py
src/agents/: GroundingAgent.py  PatchNotesAgent.py  TDTAgent.py
src/data/: README.md  main.py
src/data/data/: item_components_set15.json
src/data/ingestion/: blob_upload.py  cdragon_fetch.py  create_indexes.py  gen_item_components.py  indexers.py
src/data/retrieval/: grounding.py  retrieval.py
src/tft-agent/: .env.example  PatchNotesAgent.py
src/tft-ingest/: .env.example  README.md  blob_upload.py  build_docs.py  cdragon_fetch.py  create_indexes.py  gen_item_components.py  indexers.py  main.py
src/utils/: dotenv_loader.py  rag_tool.py
